Consolidation of css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <!-- TODO: Make navigation -->
+    <!-- TODO: fix header -->
     <div class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
       <div>
@@ -27,9 +27,13 @@
         </ul>
       </div>
     </div>
-    <div class="hero"></div>
-    <div class="content">
-      <div class="search-engine-optimization">
+
+    <section class="hero"></section>
+    
+    <main class="content">
+
+
+      <article class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           alt="SEO focuses on content, headings, mobile compatibility, social media, link building, and backlinks."
@@ -42,7 +46,9 @@
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
         </p>
-      </div>
+      </article>
+
+
       <div
         id="online-reputation-management"
         class="online-reputation-management"
@@ -61,6 +67,8 @@
           business.
         </p>
       </div>
+
+
       <div id="social-media-marketing" class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
@@ -75,7 +83,9 @@
           your lead generation.
         </p>
       </div>
-    </div>
+
+    </main>
+
     <div class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
@@ -85,6 +95,8 @@
           business, bringing customers directly to your website.
         </p>
       </div>
+
+
       <div class="benefit-brand">
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" />
@@ -93,6 +105,8 @@
           the search ranking and visibility for your business.
         </p>
       </div>
+
+
       <div class="benefit-cost">
         <h3>Cost Management</h3>
         <img src="./assets/images/cost-management.png" />
@@ -102,9 +116,13 @@
         </p>
       </div>
     </div>
+
+
     <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2023 Horiseon Social Solution Services, Inc.</p>
     </footer>
+
+
   </body>
 </html>
