Corrected link placement  to stylesheet

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Horiseon Social Solution Services</title>
   <meta name="description"
     content="Horiseon's Search Engine Optimization (S.E.O.) increases website visibility with Online Reputation Management, Social Media Marketing, and inbound strategies.">
   <meta name="keywords"
     content="Search Engine Optimization, Online Reputation Management, Social Media Marketing, Lead Generation, Brand Awareness, Cost Management"
-  <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
+    </head>
 
 <body>
   <header class="header">
@@ -30,7 +30,7 @@
     </nav>
   </header>
   <section class="hero"></section>
-  <main class=" content">
+  <main class="content">
     <article class="search-engine-optimization">
       <img src="./assets/images/search-engine-optimization.jpg"
         alt="S.E.O. focuses on content, headings, mobile compatibility, social media, link building, and backlinks."
@@ -57,7 +57,7 @@
     </article>
     <article id="social-media-marketing" class="social-media-marketing">
       <img src="./assets/images/social-media-marketing.jpg"
-        alt="Social Media Marketing engages people in a multitude of social media spaces." class="float-left" />
+        alt="Social Media Marketing engages people in a vast array of social media spaces." class="float-left" />
       <h2>Social Media Marketing</h2>
       <p>
         Social media continues to have a sizable influence on buying habits.
