--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </header>
   <section class="hero"></section>
   <main class="content">
-    <article class="search-engine-optimization">
+    <article id="search-engine-optimization" class="search-engine-optimization">
       <img src="./assets/images/search-engine-optimization.jpg"
         alt="S.E.O. focuses on content, headings, mobile compatibility, social media, link building, and backlinks."
         class="float-left" />
